and this project adheres to [Semantic Versioning](http://semver.org/).
TODO
	see github log
	* redesigned flexpath
	* new version of adios


	0. use environment variable instead of preprocessor
	1. nnti in flexpath, not usable.
	2. dspaces hanging
	3. ENABLE_TESTING in flexpath conf, enabled

## Sep 26
	dimes:
		sync before each step,
		also sync after the last step
## Sep 25
	changes:
		* add transports method, now differnet transport is chosen by
		Environment Variables.
	
	experiment:
		each node has 14 proccess
		
		56 nodes for producer
		28 nodes for consumer

		
	

## Sep 22
	in evpath_mpi/results/socket.log & evpath_mpi/results/enet.log
	enet also uses socket, I need to see how libsocket is implemented
	-------------------------------
	before meeting


	NEW version of ADIOS add support for redesigned flexpath!
	see changelog of adios-1-12: robust flexpath!
	transpormation us sz!
	if set flexpath version_tag = adios_1_12, nnti is no longer provided!

	evpath/cmnnti.c

	nnti/nnti.c available_tranport
	nnti_ib.cpp:
		setup_request_channel/setup_data_channel
		ibv_create_comp_channel_wrapper
		ibv_create_comp_channel
## Sep 21
	enet: timeout
	exp:
		with CMTransportVerbose, evpath_mpi can give verbose output of
		tranport method
	
## Sep 19
## experiment
	1773803
		1-lock-per-step with comm_world
		second step is still slow.
	1772582
	run with  MPI_COMM_WORLD communicator
	1771861
	use 2-procs group in producer, 1-group in consumer
	only run 5 steps of instructed dspaces
	previous optimization on dspaces:
		separate comunicators in consumer
		2 ranks use same communicators
		maxversion
## Sep 18
## experiment
	1768693
	with tau-enabled dspaces
	traces/instructed_raw_dspaces..
	are traces aligned?
	
	1767680, with dspaces_origin built
	raw dataspaces with lbm, to be checked
	one trace per proc!(because I used the original dspaces built?, dspaces is
	not tau-instructed..))
	traces/raw_dspaces_pro/consumer.slog2

	1769997
	minmax with 10 steps